syntax = "proto3";

option csharp_namespace = "MovieRecommender_GrpcService";

package movie;

service MovieRecommender {
  rpc GetMovieRecommendation (MovieRequest) returns (MovieResponse);
}

message MovieRequest {
  int32 userId = 1;
  int32 movieId = 2;
}

message MovieResponse {
  float score = 1;
}